fix title wrap

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -71,7 +71,7 @@ body{
         line-height: 1.2em;
         margin-bottom: 0;
 		color: #5E409D;
-		text-wrap: pretty;
+		text-wrap: balance;
 }
 	.home h1{
 		font-size: 300%;
